# FRS_Tact

./: .gitignore  JAX_SMOLVLA.md  download_all_smash_data.sh  download_data.sh  evaluate.py  finalize_cache.py  inspect_dataset.py  prepare.py  pyproject.toml  setup.py  train.py  train_vla.py
configs/: deploy_smolvla_jax.yaml  train_smolvla_jax.yaml
deploy_smolvla/: __init__.py  bridge_client.py  remote_client.py  run_client.sh
eval_scripts/: action_error_evaluate.py
eval_scripts-jax/: action_error_evaluate.py  action_reverse_tsne.py  loglike_evaluate.py  plot_loglike_modalities.py  utils.py
eval_scripts-jax/test/: eps_trace_sweep.py  k_trace_sweep.py  test_fireflow_solver.py
eval_scripts-pytorch/: loglike_evaluate.py  plot_loglike_modalities.py  utils.py
eval_scripts-pytorch/test/: create_smoke_dataset.py  test_loglike.py
flow_decoder/: README.md  __init__.py  evaluate.py  finalize_cache.py  prepare.py  train.py
flow_decoder/tests/: test_cache.py  test_integration.py  test_model.py  test_synthetic_training.py
flow_decoder/utils/: cache.py  checkpoint.py  metrics.py  model.py  source_model.py  visualize.py
modalities_eval/: __init__.py  utils.py
pure_flow_decoder/: README.md  __init__.py  evaluate.py  finalize_cache.py  train.py
pure_flow_decoder/tests/: __init__.py  test_cache.py  test_integration.py  test_model.py  test_synthetic_training.py
pure_flow_decoder/utils/: __init__.py  cache.py  checkpoint.py  metrics.py  model.py  source_model.py  visualize.py
src/lerobot/: __init__.py
src/lerobot/configs/: __init__.py
src/lerobot/datasets/: __init__.py  dataset_metadata.py  dataset_reader.py  lerobot_dataset.py
src/lerobot/datasets/v30/: __init__.py  convert_dataset_v21_to_v30.py
src/lerobot/policies/: __init__.py  factory.py  pretrained.py
src/lerobot/policies/rtc/: __init__.py
src/lerobot/policies/smolvla_jax/: __init__.py  checkpoint.py  configuration.py  data.py  functional.py  lora.py  modeling.py  policy.py  preprocessing.py  rtc.py  sharding.py  training.py
src/lerobot/processor/: __init__.py  normalize_processor.py
src/lerobot/utils/: __init__.py
tactile_encoder/: __init__.py  check_tact_simularity.py  evaluate_retrieval.py  plot_history.py  train.py
tactile_encoder/utils/: __init__.py  checkpoint.py  clip_backend.py  data.py  image_dataset.py  masking.py  metrics.py  model.py  mp_batches.py  prefetch.py  resnet.py  visualize.py
tactile_flow_steering/: README.md  __init__.py  evaluate.py  plot_history.py  train.py
tactile_flow_steering/tests/: test_data.py  test_model.py
tactile_flow_steering/utils/: __init__.py  checkpoint.py  data.py  history_plot.py  integration.py  metrics.py  model.py  mp_batches.py  visualize.py  window_io.py
tests/flow_decoder/: __init__.py  test_cache.py  test_integration.py  test_model.py  test_synthetic_training.py
tests/jax/: test_checkpoint.py  test_data.py  test_functional.py  test_lora.py  test_training.py
tools/: black_smash_02_inspect.json  compare_smolvla_backends.py  convert_smolvla_pt_to_jax.py  infer_smolvla.py  infer_smolvla_jax.py  inspect_dataset.py  prepare_smolvla_jax_npz.py  train_smolvla_jax.py
utils/: __init__.py  cache.py  checkpoint.py  metrics.py  model.py  source_model.py  utils.py  visualize.py
